# libzorpll

./: .gitmodules  .travis.yml  README  VERSION  configure.ac
.circleci/: config.yml
debian/: changelog  control  libzorpll7.0-1.shlibs  libzorpll7.0-2.shlibs  libzorpll7.0-3.shlibs  libzorpll7.0-4.shlibs  libzorpll7.0-5.shlibs  libzorpll7.0-6.shlibs  libzorpll7.0-7.shlibs
rpm/: libzorpll-6_0-12.spec  libzorpll-7_0-1.spec  libzorpll-7_0-2.spec  libzorpll-7_0-5.spec  libzorpll-7_0-6.spec  libzorpll-7_0-7.spec  libzorpll_fix-lto.patch
src/: Makefile.am  log.cc  misc.cc  process.cc  ssl.cc  stackdump.cc
src/zorp/zorpll/: Makefile.am  misc.h  ssl.h  zorplibconfig.h-win32
winbuild/: Makefile.am
winbuild/win32/vs10/: libzorpll.vcxproj  libzorpll.vcxproj.filters  libzorpll.vcxproj.in
